NIFI-12261 Removed Hortonworks Schema References
- Removed Schema Protocol Version from Schema Registry Service associated with Hortonworks Schema Registry